opam-version: "2.0"
synopsis: "Some random bits of code"
description: "Some random bits of code"
maintainer: ["Henry Till <henrytill@gmail.com>"]
authors: ["Henry Till <henrytill@gmail.com>"]
homepage: "https://github.com/henrytill/bits-ocaml"
bug-reports: "https://github.com/henrytill/bits-ocaml/issues"
depends: [
  "ocaml" {>= "4.14.0"}
  "ocamlfind"
  "delimcc"
  "sqlite3" {>= "5.0.0"}
]
build: [
  ["./configure" "-d" "_build"]
  [make "-C" "_build" "all"]
]
install: [make "-C" "_build" "DESTDIR=%{prefix}%" "install"]
dev-repo: "git+https://github.com/henrytill/bits-ocaml.git"
